force-app/main/default/objects/WebshopIcon__c/WebshopIcon__c.object-meta.xml
<CustomObject>
    <label>Webshop Icon</label>
    <nameField>
        <displayFormat>ICON-{00000}</displayFormat>
        <label>Webshop Icons Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webshop Icons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>